# llmops-with-Microsoft-Foundry-v2

./: .env.example  .gitignore  COPILOT_TASK_CHECKLIST.md  README.md  copilot_instruction_file_foundry_llmops_demo.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  eval.yml  foundry-smoke.yml  llmops-pipeline.yml  prompt-change.yml  prompt-release.yml
app/: demo_ui.py  pages.py
app/assets/: demo_steps.json  style.css
data/: demo_story.json  eval_cases.jsonl  personas.json  products.json
developer-experience/: CHEAT_SHEET.md  LAB_GUIDE.md  README.md  verify_setup.py
document/: 01_demo_scenario_and_architecture.md  02_llmops_maturity_mapping.md
prompts/: aussie_mate.txt  baseline.txt  cost_optimized.txt  grounded_retail.txt  quality_optimized.txt
scripts/: ai_feedback.py  compare_eval.py  compare_models.py  create_agent.py  export_demo_report.py  foundry_eval.py  run_baseline.py  run_eval.py  seed_local_memory.py  update_agent_version.py
src/llmops_demo/: __init__.py  agent_manager.py  agent_runner.py  config.py  evaluation.py  foundry_client.py  governance.py  logging_config.py  memory.py  model_compare.py  monitoring.py  prompt_manager.py  reporting.py  utils.py
tests/: test_config.py  test_demo_story.py  test_evaluation.py  test_memory.py  test_prompt_manager.py
